--- a/fm964/css/style.css
+++ b/fm964/css/style.css
@@ -5,7 +5,7 @@ body{ font-family: "Open Sans", sans-serif;}
 .music-player img{position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; z-index: -1; display: block; width: 100% !important; height: 100% !important; -webkit-filter: blur(2px); filter: blur(2px);}
 .music-player .info{width: 100%; height: 100px; background: #222; background: rgba(0, 0, 0, 0.8); text-align: center; position: relative;}
 .music-player .info .jp-playlist li{display: none;}
-.music-player .info .jp-playlist li a{font-size: 30px; font-weight: 300; text-decoration: none; color: #fff; color: rgba(225, 225, 225, 0.4);}
+.music-player .info .jp-playlist li a{font-size: 30px; font-weight: 300; text-decoration: none; color: #fff!important; color: rgba(225, 225, 225, 0.4);}
 .music-player .info .jp-playlist li a span{font-size: 14px; display: block; margin-top: 10px;}
 .music-player .info .jp-playlist li.jp-playlist-current{display: block;}
 .music-player .info .jp-playlist li .jp-free-media, .music-player .info .jp-playlist li .jp-playlist-item-remove{display: none;}
